--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "craft-forge/filament-language-switcher": "^1.0",
+        "dompdf/dompdf": "^3.1",
         "filament/filament": "4.0",
         "filament/spatie-laravel-media-library-plugin": "4.0",
         "laravel/framework": "^12.0",
