--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "next": "16.0.8",
