--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "bezhansalleh/filament-google-analytics": "^3.1",
+        "bezhansalleh/filament-language-switch": "^4.1",
         "caresome/filament-auth-designer": "^2.0",
-        "craft-forge/filament-language-switcher": "^1.0",
         "dompdf/dompdf": "^3.1",
         "filament/filament": "4.0",
         "filament/spatie-laravel-media-library-plugin": "4.0",
+        "joaopaulolndev/filament-edit-profile": "2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
