--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.1.6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
@@ -31,7 +32,7 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
-    "next": "16.0.8",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
     "react": "19.2.1",
