Update: Se modifico el docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -23,6 +23,10 @@ ENV NEXT_TELEMETRY_DISABLED=1
 # Argumentos de construcción (Las variables de entorno de Easypanel se pasan aquí)
 ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_GTM_ID
+ENV NEXT_PUBLIC_GTM_ID=$NEXT_PUBLIC_GTM_ID
+ARG NEXT_PUBLIC_GA_ID
+ENV NEXT_PUBLIC_GA_ID=$NEXT_PUBLIC_GA_ID
 
 # Ejecutamos el build
 RUN npm run build
